--- a/Week45_bike_walk/bike_walk.Rmd
+++ b/Week45_bike_walk/bike_walk.Rmd
@@ -101,7 +101,7 @@ g3 <- ggplot(all_commutes, aes(fill = commute, values = percent_all))+
    scale_fill_manual (name = NULL, values = c("#CCCCCC", "#66CCFF", "#0000FF"),                         labels = c("Private/Van","Public Transport", "Walk, Bike &  Other"))+
   #Changing scale to meet percentages
   scale_x_continuous(limits = c(0,21),breaks = seq(0,20,4), labels = c("0",                            paste0(seq(20,100,20),"%")))+
-  labs(title = "Walkers and bikers among all Workers", subtitle ="Each square represnts 1%")+
+  labs(title = "Walkers and bikers among all workers", subtitle ="Each square represnts 1%")+
   theme(text = element_text(family = "Sylfaen"),
         plot.title = element_text(size = 15, face = "bold", hjust = 0.5),
         plot.subtitle = element_text(size = 11, hjust = 0.5),
